[package]
name = "pneo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-std = "1.12.0"
crossterm = { version = "0.25.0", features = ["event-stream"] }
dirs = "4.0.0"
env_logger = "0.9.3"
futures = "0.3.25"
log = "0.4.17"
quick-xml = { version = "0.26.0", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.147", features = ["derive"] }
surf = "2.3.2"
tokio = { version = "1.21.2", features = ["rt", "time"] }
tui = "0.19.0"
